Alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@ h1 {
 }
 
 .form {
-  max-width: 600px;
+  max-width: 507px;
   margin: 3rem auto;
   display: grid;
   grid-gap: 1rem;
